Fixed the text alignment issue with Edge browser

--- a/src/app/ui/components/bottom/bottom.component.scss
+++ b/src/app/ui/components/bottom/bottom.component.scss
@@ -10,7 +10,7 @@
     align-items: center;
     
     div.bottom-menu {
-        text-align: end;
+        text-align: right;
         
         ul.menu {
             li.menu-item {
